# botplotlib

./: AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTORS.json  GOVERNANCE.md  LICENSE  README.md  demo.py  pyproject.toml  reputation_ledger.json  tutorial.py
.github/: labeler.yml  pull_request_template.md  pull_request_template.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_geom.yml
.github/workflows/: approval-gate.yml  ci.yml  contributor-tracker.yml  docs.yml  figure-critic.yml  publish.yml  risk-labeler.yml
.skills/figure-critic/: SKILL.md
.skills/matplotlib-refactor/: SKILL.md
.skills/spec-generation/: SKILL.md
.skills/theme-authoring/: SKILL.md
.skills/visual-regression/: SKILL.md
botplotlib/: __init__.py  _api.py  _types.py  figure.py
botplotlib/_colors/: palettes.py
botplotlib/_fonts/: arial.json  inter.json  metrics.py
botplotlib/compiler/: accessibility.py  compiler.py  data_prep.py  layout.py  ticks.py
botplotlib/geoms/: __init__.py  bar.py  labels.py  line.py  primitives.py  scatter.py  waterfall.py
botplotlib/refactor/: __init__.py  from_matplotlib.py
botplotlib/render/: png.py  svg_builder.py  svg_renderer.py
botplotlib/spec/: models.py  scales.py  theme.py
docs/: generate_examples.py  mkdocs.yml  tutorial.py
docs/docs/: CNAME  contributing.md  getting-started.md  guide.md  index.md  tutorial.md
docs/docs/api/: index.md
docs/docs/gallery/: index.md
docs/docs/guide/: data-formats.md  json-path.md  plot-types.md  (+2 more)
examples/: demo.py  demo_magazine.py
examples/refactor_examples/: 01_scatter_after.py  01_scatter_before.py  02_line_after.py  02_line_before.py  03_bar_after.py  03_bar_before.py  04_publication_after.py  04_publication_before.py  05_auto_refactor_demo.py
prompts/: agent-team-launch-prompt.md
research/: agent-architecture.md  agent-team-launch-prompt.md  agent-workflow-architecture-across-major-ai-labs.docx  agent-workflow-architecture-across-major-ai-labs.md  ai-native-workflow-design-research-report.docx  ai-native-workflow-design-research-report.md  botplotlib-research.md  cyborg-extensibility-and-governance.md  open-source-stewardship.md  toon-and-ai-native-patterns.md  weyl-recs.md
scripts/: figure_critic.py  update_baselines.py
tests/: conftest.py  test_accessibility.py  test_api.py  test_bar_labels.py  test_color_map.py  test_colors.py  test_compiler.py  test_data_prep.py  test_figure_critic.py  test_fonts.py  test_json_path.py  test_label_helpers.py  test_layout.py  test_refactor.py  test_scales_and_theme.py  test_serialization.py  test_svg_builder.py  test_svg_renderer.py  test_ticks.py  test_waterfall.py
