[project]
name = "botplotlib"
version = "0.1.0"
description = "Beautiful, lightweight, and token-efficient plotting. Also an experiment in cyborg-source. CC0 licensed."
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]
keywords = ["plotting", "visualization", "svg", "ai-native", "cyborg", "sandwich"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

authors = [
    {name = "Madeleine Daepp"},
]

[project.urls]
Homepage = "https://botplotlib.ai"
Documentation = "https://botplotlib.ai"
Repository = "https://github.com/migdaepp/botplotlib"
Issues = "https://github.com/migdaepp/botplotlib/issues"

[project.optional-dependencies]
png = ["cairosvg>=2.7"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "black>=24.0", "mypy>=1.10", "pytest-cov>=5.0", "marimo>=0.10"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24", "mkdocs-marimo>=0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
